navbar-collapse-fixed

--- a/less/header.css
+++ b/less/header.css
@@ -50,4 +50,30 @@
   font-size: 15px;
   margin-top: -45px;
 }
+@media (max-width: 990px) {
+  .header .navbar-header {
+    float: none;
+  }
+  .header .navbar-toggle {
+    display: block;
+  }
+  .header .navbar-collapse {
+    border-top: 1px solid transparent;
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
+  }
+  .header .navbar-collapse.collapse {
+    display: none!important;
+  }
+  .header .navbar-nav {
+    float: none!important;
+    margin: 7.5px -15px;
+  }
+  .header .navbar-nav > li {
+    float: none;
+  }
+  .header .navbar-nav > li > a {
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+}
 /*# sourceMappingURL=header.css.map */
